--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.username=postgres # O tu usuario de Postgres
 spring.datasource.password=tu_contraseña_de_postgres
 
 # Configuración de JPA (Hibernate)
-spring.jpa.hibernate.ddl-auto=update # 'update' actualiza el esquema. Usa 'create' para borrar y crear. 'validate' para producción.
-spring.jpa.show-sql=true # Muestra las queries SQL en la consola, muy útil para depurar
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
